# meow-ios

./: .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  README.md  project.yml
.github/workflows/: ci.yml
App/: Info.plist
App/Sources/: AppModel.swift  BridgingHeader.h  MeowApp.swift
MeowCore/include/: meow_core.h
MeowIntegrationTests/: README.md
MeowIntegrationTests/EngineIntegration/: EngineBootTests.swift  TunBridgeTests.swift
MeowIntegrationTests/ProtocolFixtures/: UDPProtocolTests.swift
MeowIntegrationTests/Screens/: ConnectionsScreenTests.swift
MeowTests/: README.md
MeowTests/API/: ConnectionsTests.swift  LogsTests.swift  MeowAPITests.swift  RulesTests.swift
MeowTests/FFI/: MeowCoreBridgeTests.swift
MeowTests/Models/: ChinaDirectKeywordsTests.swift  IdentifierSlugTests.swift  LocalizableParityTests.swift
MeowTests/Parsing/: EmojiGroupSelectNodeTests.swift  SubscriptionParserTests.swift
MeowTests/Services/: SubscriptionServiceTests.swift  VpnManagerTests.swift
MeowUITests/: README.md
PacketTunnel/: Info.plist
core/rust/geosite-mrs-builder/: Cargo.toml
core/rust/geosite-mrs-builder/src/: main.rs
docs/: BUILD.md  INVESTIGATION-2026-05-16-stress-rss-netstack-smoltcp.md  INVESTIGATION-2026-05-18-tcp-direct-rule-disconnect.md  INVESTIGATION-2026-05-19-geoip-download-tls-failure.md  PRD.md  PROJECT_PLAN.md  TEST_STRATEGY.md  index.html
meow-ios.xcodeproj/: project.pbxproj
scripts/: README.md  build-adhoc.sh  build-cn-iprange.py  build-release.sh  build-rust.sh  upload-testflight-metadata.py  upload-testflight.sh
(+87 files in other folders)
