[package]
name = "geosite-mrs-builder"
version = "0.1.0"
edition = "2021"
description = "Build-time tool: fetch V2Ray geosite.dat, convert to meow-rs geosite.mrs for bundling in the iOS app."
publish = false

[dependencies]
anyhow = "1"
ureq = { version = "2", default-features = false, features = ["tls", "native-certs"] }
meow-rules = { git = "https://github.com/madeye/meow-rs", rev = "a703135dd7be602cd7ff3bd1fe05981250b20ddc" }

# `.mrs` writing pulls zstd via meow-rules; no extra dep needed here.
